// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StackCards creates correct snapshot for an array of notebooks 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={2}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    key="0"
    lg={4}
    md={6}
    sm={12}
    xs={12}
  >
    <WithStyles(StackCard)
      deletePermission="delete"
      deleteStack={[Function]}
      editPermission="edit"
      openPermission="open"
      openStack={[Function]}
      stack={
        Object {
          "displayName": "name1",
          "id": "1",
          "type": "type1",
        }
      }
      typeName="expectedTypeName"
      userPermissions={
        Array [
          "open",
          "delete",
          "create",
          "edit",
        ]
      }
    />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    key="1"
    lg={4}
    md={6}
    sm={12}
    xs={12}
  >
    <WithStyles(StackCard)
      deletePermission="delete"
      deleteStack={[Function]}
      editPermission="edit"
      openPermission="open"
      openStack={[Function]}
      stack={
        Object {
          "displayName": "name2",
          "id": "2",
          "type": "type2",
        }
      }
      typeName="expectedTypeName"
      userPermissions={
        Array [
          "open",
          "delete",
          "create",
          "edit",
        ]
      }
    />
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    key="2"
    lg={4}
    md={6}
    sm={12}
    xs={12}
  >
    <WithStyles(StackCard)
      deletePermission="delete"
      deleteStack={[Function]}
      editPermission="edit"
      openPermission="open"
      openStack={[Function]}
      stack={
        Object {
          "displayName": "name3",
          "id": "3",
          "type": "type3",
        }
      }
      typeName="expectedTypeName"
      userPermissions={
        Array [
          "open",
          "delete",
          "create",
          "edit",
        ]
      }
    />
  </WithStyles(ForwardRef(Grid))>
  <ComponentWrapper
    permission="create"
    style={
      Object {
        "width": "100%",
      }
    }
    userPermissions={
      Array [
        "open",
        "delete",
        "create",
        "edit",
      ]
    }
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      lg={4}
      md={6}
      sm={12}
      xs={12}
    >
      <WithStyles(NewStackButton)
        onClick={[Function]}
        typeName="expectedTypeName"
      />
    </WithStyles(ForwardRef(Grid))>
  </ComponentWrapper>
</WithStyles(ForwardRef(Grid))>
`;

exports[`StackCards creates correct snapshot for an empty array 1`] = `
<WithStyles(ForwardRef(Grid))
  container={true}
  spacing={2}
>
  <ComponentWrapper
    permission="create"
    style={
      Object {
        "width": "100%",
      }
    }
    userPermissions={
      Array [
        "open",
        "delete",
        "create",
        "edit",
      ]
    }
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      lg={4}
      md={6}
      sm={12}
      xs={12}
    >
      <WithStyles(NewStackButton)
        onClick={[Function]}
        typeName="expectedTypeName"
      />
    </WithStyles(ForwardRef(Grid))>
  </ComponentWrapper>
</WithStyles(ForwardRef(Grid))>
`;
